--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -55,7 +55,8 @@
   transform: scale(1);
 }
 
-.about-image-wrapper:hover .about-image {
+.about-image-wrapper:hover .about-image,
+.about-image-wrapper.force-hover .about-image {
   filter: grayscale(0%) contrast(100%);
   transform: scale(1.03);
 }
